chore: Update env example and README for Docker
- Remove Caddy port variables from .env.example
- Update README with Docker commands
- Update deploy workflow for new structure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,14 @@ jobs:
           ruby fetch-posts.rb
           ruby fetch-pages.rb
           ruby fetch-images.rb
+
+      - name: Fetch WordPress Comments
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPO: ${{ github.repository }}
+        run: |
+          cd scripts
+          ruby fetch-comments.rb
           
       - name: Download Hugo Modules
         run: |
