--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,13 @@ DB_PASSWORD=secure_random_password_here
 DB_ROOT_PASSWORD=secure_root_password_here
 
 # =============================================
+# LOCAL OVERRIDES
+# =============================================
+
+# Override port for WordPress in local development
+# WP_PORT=8888
+
+# =============================================
 # BACKUP CONFIGURATION
 # =============================================
 
