refactor: Fix hugo.toml author config
- Change author from string to object format
- Match new structure: params.author.name/email

--- a/hugo-site/hugo.toml
+++ b/hugo-site/hugo.toml
@@ -7,7 +7,9 @@ title = 'My Site'
     path = 'github.com/CaiJimmy/hugo-theme-stack/v3'
 
 [params]
-  author = 'AUTHOR_NAME'
+  [params.author]
+    name = 'Your Name'
+    email = 'your-email@example.com'
   description = 'A Hugo site powered by WordPress'
   
   [params.comments]
