docs: Update Caddyfile for local dev

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,69 +1,5 @@
-# Caddyfile - Caddy with Cloudflare ACME DNS challenge
-# This configuration handles SSL certificates via Cloudflare DNS challenge
-# and reverse proxies to WordPress with proper headers
+# Caddyfile - Local development (no HTTPS)
 
-{
-    # Global options
-    email {$ACME_EMAIL}
-    
-    # Automatic HTTPS with Cloudflare DNS challenge
-    # Requires CLOUDFLARE_API_TOKEN environment variable
-    acme_dns cloudflare {$CLOUDFLARE_API_TOKEN}
-    
-    # Enable HTTP/3 (QUIC)
-    servers {
-        protocol {
-            experimental_http3
-        }
-    }
+:80 {
+    respond "Hello from Caddy!" 200
 }
-
-# Site configuration
-{$DOMAIN} {
-    # Reverse proxy to WordPress
-    reverse_proxy wordpress:80 {
-        # Headers for WordPress to know it's behind HTTPS
-        header_up Host {host}
-        header_up X-Real-IP {remote}
-        header_up X-Forwarded-For {remote}
-        header_up X-Forwarded-Proto {scheme}
-        header_up X-Forwarded-Host {host}
-    }
-
-    # Security headers
-    header {
-        # Enable HSTS (HTTP Strict Transport Security)
-        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-        
-        # Prevent clickjacking
-        X-Frame-Options "SAMEORIGIN"
-        
-        # XSS protection
-        X-XSS-Protection "1; mode=block"
-        
-        # Content type sniffing protection
-        X-Content-Type-Options "nosniff"
-        
-        # Referrer policy
-        Referrer-Policy "strict-origin-when-cross-origin"
-        
-        # Permissions policy (restrict browser features)
-        Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
-    }
-
-    # Compress responses
-    encode gzip zstd
-
-    # Logging
-    log {
-        output file /data/access.log {
-            roll_size 10MB
-            roll_keep 10
-        }
-    }
-}
-
-# Optional: WWW redirect (uncomment if using www subdomain)
-# www.{$DOMAIN} {
-#     redir https://{$DOMAIN}{uri}
-# }
