docs: Add detailed Cloudflare setup instructions to README
Move Cloudflare credential instructions to a Prerequisites section
that comes BEFORE running setup.sh, so users have the required
tokens and IDs ready when prompted.

Also update .env.example to remove outdated ACME references and
use current variable names (PUBLIC_DOMAIN, WP_HOST).

--- a/.env.example
+++ b/.env.example
@@ -6,18 +6,17 @@
 # REQUIRED VARIABLES
 # =============================================
 
-# Domain where WordPress will be accessible
-# Example: wordpress.your-tailnet.tsa.dev (for Tailscale)
-# Or: cms.yourdomain.com (for public DNS)
-DOMAIN=your-wordpress-domain.com
+# =============================================
+# DOMAIN CONFIGURATION
+# =============================================
 
-# Cloudflare API Token (for ACME DNS challenge)
-# Create at: https://dash.cloudflare.com/profile/api-tokens
-# Required permissions: Zone:Read, DNS:Edit
-CLOUDFLARE_API_TOKEN=your_cloudflare_api_token_here
+# Public domain where your Hugo site will be deployed (Cloudflare Pages)
+# Example: blog.yourdomain.com or yoursite.pages.dev
+PUBLIC_DOMAIN=your-public-domain.com
 
-# Email for ACME account registration
-ACME_EMAIL=your-email@example.com
+# Private domain for WordPress admin access (via Tailscale)
+# Example: wordpress.your-tailnet.ts.net
+WP_HOST=wordpress.your-tailnet.ts.net
 
 # Database Configuration
 DB_PASSWORD=secure_random_password_here
