--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           go-version: '1.23'
 
+      - name: Install Image Tools
+        run: sudo apt-get update && sudo apt-get install -y imagemagick libmagickwand-dev webp libavif-bin jpegoptim optipng pngquant
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
