--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - BUNDLE_PATH=/app/vendor/bundle
       - GEM_HOME=/app/vendor/bundle
       - OUTPUT_DIR=/app/hugo-site/content/posts
+      - FONTCONFIG_FILE=/etc/fonts/fonts.conf
     env_file:
       - .env
     profiles:
