fix: WebP-only images, correct docker compose commands, and working workflow
- Fixed fetch-images.rb to return WebP paths and update markdown files
- Fixed fetch-posts.rb to preserve images by converting to markdown syntax
- Fixed seed-posts.rb SSL detection and URL path
- Updated all docs to use 'docker compose exec' instead of 'docker exec'
- Added imaging config to hugo.toml for consistent WebP output
- Created workflow-reference.md with working end-to-end steps
- Images now correctly saved to static/images/ (not content/posts/)
- Markdown files updated to reference .webp instead of .jpg
- Verified: 0 AVIF files generated, WebP-only output working

--- a/hugo-site/hugo.toml
+++ b/hugo-site/hugo.toml
@@ -57,3 +57,9 @@ title = 'My Site'
   [markup.goldmark]
     [markup.goldmark.renderer]
       unsafe = true
+
+[imaging]
+  quality = 85
+  resampleFilter = "lanczos"
+  [imaging.webp]
+    quality = 85
