test: add RSpec test suite with rspec-given
- Add rspec, rspec-given, webrick gems to Gemfile
- Create spec infrastructure (spec_helper, support helpers, fixtures)
- Add DockerHelper for test isolation with COMPOSE_PROJECT_NAME
- Add MockData generators and HugoAssertions helpers
- Add WpApiMock for WordPress API mocking
- Write specs for fetch-posts.rb, fetch-images.rb, hugo_build
- Add e2e_spec.rb for full pipeline testing (tagged :slow)
- Create test runner script (scripts/bin/test) with --fast/--full modes
- Add testing documentation (docs/testing-rspec.md)
- Add rspec-given syntax guidance to AGENTS.md
- Fix fetch-posts.rb to handle connection errors gracefully

--- a/scripts/Gemfile
+++ b/scripts/Gemfile
@@ -6,3 +6,9 @@ gem 'httparty', '~> 0.21'
 gem 'nokogiri', '~> 1.15'
 gem 'mini_magick', '~> 4.12'
 gem 'image_optim', '~> 0.31'
+
+group :test do
+  gem 'rspec', '~> 3.12'
+  gem 'rspec-given', '~> 3.8'
+  gem 'webrick', '~> 1.8'
+end
